docs/configure/cpx-bgp-router/ingress-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
spec:
  rules:
  - host: kuard.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
